docs/src/articles/kubernetes/6.software/resources/tekton/tekton.ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "tekton-dashboard-ingress"
  labels:
    app.kubernetes.io/name: "tekton-dashboard-ingress"
    app.kubernetes.io/instance: "tekton-dashboard-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "self-signed-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: "tekton-dashboard.local"
    http:
      paths:
      - path: "/?(.*)"
        pathType: "ImplementationSpecific"
        backend:
          service:
            name: "tekton-dashboard"
            port:
              number: 9097
  tls:
  - hosts:
    - "tekton-dashboard.local"
    secretName: "tekton-dashboard.local-tls"
